--- a/app/src/main/res/layout/fragment_game_league.xml
+++ b/app/src/main/res/layout/fragment_game_league.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.pete.amc.GameFragment">
+    tools:context="com.example.pete.amc.GameLeagueFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
