--- a/app/src/main/res/layout/fragment_favorite_row.xml
+++ b/app/src/main/res/layout/fragment_favorite_row.xml
@@ -12,17 +12,17 @@
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:id="@+id/imageView"
-            android:src="@mipmap/ic_explore_black_24dp"
+            android:id="@+id/icon"
+            android:src="@drawable/ic_explore_black_24dp"
             android:layout_margin="5dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:gravity="center"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Large Text"
-            android:id="@+id/textView"
+            android:id="@+id/title"
             android:layout_margin="5dp" />
 
     </LinearLayout>
@@ -33,5 +33,4 @@
         android:background="#D3D3D3"
         android:layout_below="@+id/imageView">
     </View>
-
 </LinearLayout>
