--- a/app/src/main/res/layout/fragment_game_league.xml
+++ b/app/src/main/res/layout/fragment_game_league.xml
@@ -12,6 +12,5 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="字彙聯盟" />
-
+        android:text="字彙聯盟 coming soon..." />
 </FrameLayout>
