--- a/app/src/main/res/layout/activity_log_in_info.xml
+++ b/app/src/main/res/layout/activity_log_in_info.xml
@@ -42,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Log In"
-        android:id="@+id/buttonRealLogIn"
+        android:id="@+id/button4RealLogIn"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:textColor="#FFFFFF"/>
