--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Guest"
-        android:id="@+id/textViewHeaderName"
+        android:id="@+id/textViewHeaderUser"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <RelativeLayout
