--- a/app/src/main/res/layout/activity_manage_account.xml
+++ b/app/src/main/res/layout/activity_manage_account.xml
@@ -3,10 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.pete.amc.ManageAccountActivity">
 
     <ImageView
@@ -18,39 +14,40 @@
         android:layout_marginTop="30dp"
         android:src="@mipmap/ic_account_circle_black_24dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:text="User"
-        android:id="@+id/textViewProfileUser"
-        android:layout_below="@+id/imageViewProfile"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp" />
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textViewProfileUser"
         android:layout_centerHorizontal="true"
-        android:orientation="horizontal">
+        android:layout_below="@+id/imageViewProfile"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        android:id="@+id/linearLayout">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="email@sample.com"
-            android:id="@+id/textViewProfileEmail"
-            android:layout_centerHorizontal="true" />
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:text="User"
+            android:id="@+id/textViewProfileUser" />
 
         <ImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="8dp"
-            android:src="@mipmap/ic_check_circle_black_24dp"/>
+            android:layout_marginTop="6dp"
+            android:src="@mipmap/ic_check_circle_black_24dp"
+            android:id="@+id/imageViewProfileCheck"/>
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="email@sample.com"
+        android:id="@+id/textViewProfileEmail"
+        android:layout_below="@+id/linearLayout"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
