--- a/app/src/main/res/layout/dialog_fragment_manage_account.xml
+++ b/app/src/main/res/layout/dialog_fragment_manage_account.xml
@@ -4,6 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/ic_email_black_24dp"
+        android:id="@+id/imageView2"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="8dp"/>
 
     <TextView
         android:paddingBottom="@dimen/activity_vertical_margin"
@@ -14,7 +22,7 @@
         android:layout_height="wrap_content"
         android:text="Verify your email to access all the goodies!"
         android:id="@+id/textView"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/imageView2"
         android:layout_centerHorizontal="true" />
 
     <CheckBox
@@ -22,27 +30,29 @@
         android:layout_height="wrap_content"
         android:text="Never reminds me again"
         android:id="@+id/checkBoxManage"
+        android:textColor="@android:color/tab_indicator_text"
+        android:checked="false"
         android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:textColor="@android:color/tab_indicator_text"/>
+        android:layout_centerHorizontal="true" />
 
     <Button
-        android:layout_marginTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="SEND VERIFICATION EMAIL"
         android:id="@+id/buttonManageSend"
+        android:textColor="@color/colorPrimary"
         android:layout_below="@+id/checkBoxManage"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/colorPrimary"/>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="I GOT IT"
         android:id="@+id/buttonGotIt"
+        android:textColor="@color/colorPrimary"
         android:layout_below="@+id/buttonManageSend"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/colorPrimary"/>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
