--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignLeft="@+id/editTextCreateEmail"
         android:layout_alignStart="@+id/editTextCreateEmail"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="16dp"
         android:hint="User Name"/>
 
     <EditText
@@ -59,7 +59,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Create an Account"
+        android:text="CREATE AN ACCOUNT"
         android:id="@+id/buttonCreateAcc"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
