--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -34,10 +34,10 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:src="@mipmap/ic_check_circle_black_24dp"
-        android:layout_above="@+id/textViewHeaderEmail"
-        android:layout_alignRight="@+id/imageViewHeader"
-        android:layout_alignEnd="@+id/imageViewHeader"
-        android:layout_marginBottom="4dp"/>
+        android:layout_alignBottom="@+id/textViewHeaderUser"
+        android:layout_toRightOf="@+id/textViewHeaderUser"
+        android:layout_toEndOf="@+id/textViewHeaderUser"
+        android:layout_marginLeft="8dp"/>
 
     <TextView
         android:id="@+id/textViewHeaderEmail"
