--- a/app/src/main/res/menu/activity_main_drawer_user.xml
+++ b/app/src/main/res/menu/activity_main_drawer_user.xml
@@ -11,4 +11,13 @@
             android:icon="@mipmap/ic_power_settings_new_black_24dp"
             android:title="Log Out" />
     </group>
+
+    <item android:title="AMC v1.0">
+        <menu>
+            <item
+                android:title=""
+                android:id="@+id/nav_v"/>
+        </menu>
+    </item>
+
 </menu>
