--- a/app/src/main/res/layout/fragment_game_rank.xml
+++ b/app/src/main/res/layout/fragment_game_rank.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,10 +7,42 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.pete.amc.GameRankFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="單字積分" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="V"
+        android:id="@+id/textViewRankDivision"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
-</FrameLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="144dp"
+        android:id="@+id/imageViewRankMetal"
+        android:layout_below="@+id/textViewRankDivision"
+        android:layout_centerHorizontal="true"
+        android:src="@mipmap/bronze"
+        android:layout_marginTop="16dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="0"
+        android:id="@+id/textViewRankPoint"
+        android:layout_below="@+id/imageViewRankMetal"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Play"
+        android:id="@+id/buttonRankPlay"
+        android:layout_below="@+id/textViewRankPoint"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:textColor="#FFFFFF" />
+
+</RelativeLayout>
