--- a/app/src/main/res/layout/activity_game_rank.xml
+++ b/app/src/main/res/layout/activity_game_rank.xml
@@ -9,18 +9,49 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="96dp"
         android:id="@+id/relativeLayout2"
         android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp">
+        android:layout_marginLeft="4dp">
+
+        <RelativeLayout
+            android:layout_width="160dp"
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@+id/relativeLayout"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="apple"
+                    android:id="@+id/textViewRankVocab" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="n."
+                    android:id="@+id/textViewRankPoS" />
+
+            </LinearLayout>
+        </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="96dp"
             android:layout_height="96dp"
+            android:id="@+id/relativeLayout"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:id="@+id/relativeLayout">
+            android:layout_alignParentEnd="true">
 
             <com.example.pete.amc.GameRankTimer
                 android:id="@+id/timer"
@@ -41,28 +72,6 @@
                 android:layout_centerHorizontal="true" />
         </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="apple"
-                android:id="@+id/textViewRankVocab" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="n."
-                android:id="@+id/textViewRankPoS" />
-
-        </LinearLayout>
     </RelativeLayout>
 
     <TextView
